[build-system]
requires = ["setuptools>=42", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytracik"
description = "TracIK Python Bindings"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Hao Chen", email = "chen960216@gmail.com" },
]
keywords = ["robotics", "inverse kinematics", "trac_ik"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/chenhaox/pytracik"
Repository = "https://github.com/chenhaox/pytracik"

[tool.setuptools.dynamic]
version = { attr = "trac_ik.version.__version__" }

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_* *-win32 *-manylinux_i686 cp39-macosx_arm64"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_34"
manylinux-aarch64-image = "manylinux_2_34"
before-all = "dnf install -y epel-release && dnf config-manager --set-enabled crb && dnf install -y boost-devel eigen3-devel orocos-kdl-devel cmake gcc-c++ && cd /tmp && curl -L https://github.com/stevengj/nlopt/archive/refs/tags/v2.7.1.tar.gz | tar xz && cd nlopt-2.7.1 && cmake -DCMAKE_INSTALL_PREFIX=/usr -DNLOPT_PYTHON=OFF -DNLOPT_OCTAVE=OFF -DNLOPT_MATLAB=OFF -DNLOPT_GUILE=OFF -DNLOPT_SWIG=OFF . && make -j$(nproc) && make install"

[tool.cibuildwheel.macos]
before-all = "brew install boost eigen nlopt orocos-kdl"
environment = { MACOSX_DEPLOYMENT_TARGET = "15.0", REPAIR_LIBRARY_PATH = "$(brew --prefix)/lib:$(brew --prefix orocos-kdl)/lib" }
repair-wheel-command = "DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
before-all = "powershell -Command \"Invoke-WebRequest -Uri 'https://github.com/chenhaox/pytracik/releases/download/dependency_files/dependency.zip' -OutFile dependency.zip; Expand-Archive -Path dependency.zip -DestinationPath . -Force; Remove-Item dependency.zip; Copy-Item -Path dependency\\nlopt\\bin\\nlopt.dll -Destination trac_ik\\nlopt.dll -Force\""

